# securesettings-lab

./: README.md  pyproject.toml
src/securesettings/: __init__.py  crypto.py  settings.py
src/securesettings.egg-info/: PKG-INFO  SOURCES.txt
src/securesettings_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_securesettings.py
